--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@
 - title: Publications
   url: /publications/
 
-#- title: Blog
-#  url: /blog/
+- title: CV
+  url: /shan-cv.pdf/
 
 # - title: Teaching
 # url: /teaching/
