--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,10 +3,10 @@
 shan_jiang:
   name: Shan Jiang
   #web: sjiang@ccs.neu.edu
-  #email: billy@rick.com
-  #bio: "What do you want, jewels? I am a very extravagant man."
-  #avatar: bio-photo-2.jpg
-  #twitter: extravagantman
-  #google:
-    #plus: BillyRick
+  #email: sjiang@ccs.neu.edu
+  #bio: "What do you want?"
+  #avatar: me.jpg
+  #twitter: x
+  #google: x
+  #plus: x
 
