--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,16 +4,16 @@
   url: /
 
 - title: Publications
-  url: /publications/
+  url: /publications
 
 - title: CV
   url: /shan-cv.pdf
 
 # - title: Teaching
-# url: /teaching/
+# url: /teaching
 
 # - title: Projects
-#  url: /projects/
+#  url: /projects
 
 #- title: CV
-#  url: /cv/
+#  url: /cv
