change footer color

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ titlecase: true
 
 # Site owner
 owner:
-  name: Shan Jiang, 江山
+  name: Shan Jiang 江山
   avatar: me_avatar.jpg
   bio: PhD Student @Northeastern University
   email: sjiang@ccs.neu.edu
