--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@
 - title: Publications
   url: /publications
 
+- title: Resources
+  url: /resources
+
 - title: CV
   url: /shan-cv.pdf
 
@@ -14,6 +17,3 @@
 
 # - title: Projects
 #  url: /projects
-
-#- title: CV
-#  url: /cv
