--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@
 - title: Resources
   url: /resources
 
+- title: Blog
+  url: https://medium.com/@shan.sam.jiang
+
 - title: CV
   url: /shan-cv.pdf
 
