--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ owner:
   github: printfoo
   stackoverflow: #http://stackoverflow.com/users/123456/username
   linkedin: shan-jiang
-  google_scholar:
+  google_scholar: 0LITOxAAAAAJ
   xing: #username
   lastfm: #username
   tumblr: #username
