--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Shan Jiang
 author: Shan Jiang
 email: sjiang@ccs.neu.edu
-description: Ph.D. Student @ Northeastern | Social Computing | Computational Social Science ...
+description: Ph.D. Student @ Northeastern | Social Computing | Computational Social Science
 
 # social links
 # twitter_username: jekyllrb
