--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 title: Shan Jiang
 author: Shan Jiang
 #email: sjiang@ccs.neu.edu
-#description: Ph.D. Student @ Northeastern | Social Computing | Computational Social Science
+description: ~#Ph.D. Student @ Northeastern | Social Computing | Computational Social Science
 
 # social links
 # twitter_username: jekyllrb
-github_username: printfoo
+#github_username: printfoo
 # rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jekyll
-linkedin_username: shan-jiang
+#linkedin_username: shan-jiang
 # pinterest_username: jekyll
 # youtube_username: jekyll
 # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
