--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Shan Jiang
 author: Shan Jiang
 #email: sjiang@ccs.neu.edu
-description: Last Update: 03/17/2019
+description: Mar 17, 2019
 
 # social links
 # twitter_username: jekyllrb
