--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Shan Jiang
 author: Shan Jiang
 #email: sjiang@ccs.neu.edu
-description: Sep 4, 2019
+description: 2020
 
 # social links
 # twitter_username: jekyllrb
