add mac21 and facct21 papers

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Shan Jiang
+title: Shan Jiang 江山
 author: Shan Jiang
 #email: sjiang@ccs.neu.edu
-description: 2020
+description: 2021
 
 
 google_analytics: UA-93528281-1
