--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Shan Jiang
 author: Shan Jiang
 #email: sjiang@ccs.neu.edu
-description: 2021
+description: Shan Jiang’s homepage.
 
 
 google_analytics: UA-93528281-1
