update title and favicon

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Shan Jiang
-author: Shan Jiang
-#email: sjiang@ccs.neu.edu
-description: Shan Jiang’s homepage.
+title: Shan Jiang 江山
+author: Shan Jiang 江山
+# email: sjiang@ccs.neu.edu
+# description: Shan Jiang’s homepage.
 
 
 google_analytics: UA-93528281-1
